<resources>
    <string name="app_name">Agsec</string>
    <string name="copyright">Copyright. PreciousLord Apps</string>
    <string name="contact_info">PRECIOUSLORD TECHNOLOGIES \n\n
        Get in Touch with Us for your:\n
        - Custom software development\n
        - Android Application development\n
        - UI/UX design\n
        - Web Programming \n\n
        Contact us on:\n
        phone: 07063774241 \n
        email: easyapps@gmail.com \n\n
    </string>
    <string name="welcome">Welcome </string>
    <string name="sign_in">Sign In (User)</string>
    <string name="expertsign_up">Sign Up (Expert)</string>
    <string name="expertsign_in">Sign In (Expert)</string>
    <string name="sign_up">Sign Up (User)</string>
    <string name="dashboard">Dashboard</string>
    <string name="phone_hint">Phone</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="lgn_question">Dont have an account? </string>
    <string name="expert_lgn_question">Dont have an account? Register As Expert</string>
    <string name="reg_question">Already have an account? Login</string>
    <string name="lgn_btn_name">Login</string>
    <string name="expert_lgn_btn_name">Login (Expert)</string>
    <string name="reg_btn_name">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_loan">Loan Calculator</string>
    <string name="title_loginpage">Login</string>
    <string name="title_about">About</string>
    <string name="title_agrobodies">Agro Agencies in Nigeria</string>
    <string name="app_motto">An Agro-informatics Application providing informative solution to security-related issues and other farmer information needs</string>
    <string name="about_agric">Agriculture includes farming in all branches and, among other things, includes the cultivation and tillage of soil, dairying, the production, cultivation, growing and harvesting of any agricultural and horticultural commodities, the raising of livestock or poultry, and any practices performed by a farmer on a farm as an incident to or in conjunction with such farming operations, but does not include the manufacturing or processing of sugar, coconuts, abaca, tobacco, pineapple or other farm products. \n
        “Farming” or “agriculture” shall include farming in all of its branches and the cultivation and tillage of the soil, dairying, the production, cultivation, growing and harvesting of any agricultural, aquacultural, floricultural or horticultural commodities, the growing and harvesting of forest products upon forest land, the raising of livestock including horses, the keeping of horses as a commercial enterprise, the keeping and raising of poultry, swine, cattle and other domesticated animals used for food purposes, bees, fur-bearing animals, and any forestry or lumbering operations, performed by a farmer, who is hereby defined as one engaged in agriculture or farming as herein defined, or on a farm as an incident to or in conjunction with such farming operations, including preparations for market, delivery to storage or to market or to carriers for transportation to market.</string>
    <string name="agric_wiki">Agriculture is the cultivation of land and breeding of animals and plants to provide food, fiber, medicinal plants and other products to sustain and enhance life.[1] Agriculture was the key development in the rise of sedentary human civilization, whereby farming of domesticated species created food surpluses that enabled people to live in cities. The study of agriculture is known as agricultural science. The history of agriculture dates back thousands of years; people gathered wild grains at least 105,000 years ago and began to plant them around 11,500 years ago before they became domesticated. Pigs, sheep, and cattle were domesticated over 10,000 years ago. Crops originate from at least 11 regions of the world. Industrial agriculture based on large-scale monoculture has in the past century come to dominate agricultural output, though about 2 billion people worldwide still depend on subsistence agriculture. \n
    The major agricultural products can be broadly grouped into foods, fibers, fuels, and raw materials (such as rubber). Classes of foods include cereals (grains), vegetables, fruits, oils, meat, milk, and eggs. Over one-third of the world's workers are employed in agriculture, second only to the service sector, although the number of agricultural workers in developed countries has decreased significantly over the past several centuries.</string>
    <string name="types">Types of Agriculture</string>
    <string name="details">There are basically four types of agriculture \n
    1. Industrialized Agriculture \n
    2. Subsistence Agriculture \n
    3. Shifting Cultivation \n
    4. Pastoral Agriculture</string>
    <string name="subsistence">Subsistence Agriculture</string>
    <string name="subs_detail">Subsistence agriculture is a self-sufficiency farming system in which the farmers focus on growing enough food to feed themselves and their entire families. The output is mostly for local requirements with little or no surplus trade. The typical subsistence farm has a range of crops and animals needed by the family to feed and clothe themselves during the year. Planting decisions are made principally with an eye toward what the family will need during the coming year, and secondarily toward market prices.</string>
    <string name="industrialized">Industrialized or Intensive Agriculture</string>
    <string name="ind_detail">Intensive farming involves various types of agriculture with higher levels of input and output per cubic unit of agricultural land area. It is characterized by a low fallow ratio, higher use of inputs such as capital and labour, and higher crop yields per cubic unit land area.[1][2] This contrasts with traditional agriculture, in which the inputs per unit land are lower. The term "intensive" involves various meanings, some of which refer to organic farming methods (such as biointensive agriculture and French intensive gardening), and others that refer to nonorganic and industrial methods.</string>
    <string name="shifting">Shifting Cultivation</string>
    <string name="shift_detail">Cultivation by shifts is a popular system when farmers use plots of land to grow crops temporary and then let the land revert to its natural vegetation. The farmer works with different plots and always abandons the ones that were used for agriculture and now need some rest.</string>
    <string name="pastoral">Pastoral Agriculture</string>
    <string name="pas_detail">Pastoral farming (also known in some regions as ranching, livestock farming or grazing) is a form of agriculture aimed at producing livestock, rather than growing crops. Examples include dairy farming, raising beef cattle, and raising sheep for wool. In contrast, arable farming concentrates on crops rather than livestock.</string>
    <string name="types_broad">Types of Farming in a broader sense</string>
    <string name="broad_detail">
    1. Alligator farming – establishment for breeding and raising of crocodilians in order to produce meat, leather, and other goods. \n\n
    2. Aquaculture – farming of aquatic organisms such as fish, crustaceans, molluscs and aquatic plants. \n\n
    3. Contract farming – agricultural production carried out according to an agreement between a buyer and farmers \n\n
    4. Dairy farming – class of agricultural, or an animal husbandry, enterprise, for long-term production of milk, usually from dairy cows but also from goats and sheep, which may be either processed on-site or transported to a dairy factory for processing and eventual retail sale. \n\n
    5. Integrated farming – more integrated approach to farming as compared to existing monoculture approaches. It refers to agricultural systems that integrate livestock and crop production and may sometimes be known as Integrated Biosystems. \n\n
    6. Orchardry – managing orchards, intentional planting of trees or shrubs that are maintained for food production. Orchards comprise fruit or nut-producing trees which are grown for commercial production. \n\n
    7. Organic farming – form of agriculture that relies on techniques such as crop rotation, green manure, compost and biological pest control. \n\n
    8. Pig farming – is the raising and breeding of domestic pigs as livestock, and is a branch of animal husbandry. Pigs are farmed principally to be eaten (e.g. bacon, gammon) or sometimes skinned. \n\n
    9. Poultry farming - is the process of raising domesticated birds such as chickens, ducks, turkeys and geese for the purpose of farming meat or eggs for food. Poultry are farmed in great numbers with chickens being the most numerous. More than 50 billion chickens are raised annually as a source of food, for both their meat and their eggs. \n\n
    10. Sericulture – silk farming, the rearing of silkworms for the production of raw silk. \n\n
    11. Sheep husbandry – specifically dealing with the raising and breeding of domestic sheep.</string>
    <string name="total_interest">Total Interest (₦)</string>
    <string name="total_payment">Total Payment (₦)</string>
    <string name="monthly_payment">Monthly Payment (₦)</string>
    <string name="calculate">Calculate</string>
    <string name="no_of_years">No of years</string>
    <string name="rate">Rate (%)</string>
    <string name="principal_amount">Principal Amount (₦)</string>
    <string name="tip1_header">* Soil requirement when growing Crops</string>
    <string name="tip1_detail">
        1. Soil texture \n
        The texture of the soil affects its water holding capacity and its yield eventually which makes it an important feature to look out for. So this must be considered when growing crops because the coarse nature sandy soil creates very large air spaces when compacted. This thus makes water to drains easily and hence becomes unavailable for the crop. Clay soil on the other hand has a very smooth texture and when compacted it has small air spaces which become water logged. Also, when it dries it damages the plant roots hence the plant is not able to translocate food and transport water and it dies eventually.\n
Loams and sandy loams are the best for growing crops.\n\n
        2. Soil depth \n
        Adequate soil volume is a major requirement for crops root development.one should avoid shallow soil when growing crops. Shallow soil leads to: weak anchorage of roots, low available soil moisture for plants and also low exploitable soil nutrients. E.g. rubber growth and yield decreases with poor soil depth.
    </string>
    <string name="tip2_header">* Better Crop Production</string>
    <string name="tip2_detail">
        1. Switching crops \n
        More and more crops will eventually become impossible to be cultivated due to heat as a result of climate change. So crop switching may be the future of sustainable agriculture. For instance, in Mexico, the government is looking to varieties of cocoa to replace coffee crops, which may not be suitable to grow by 2025 due to blight and heat.\n
        With the right technical assistance and packages of better genetics, management practice and inputs, switching crops could be an opportunity for smaller farmers struggling with current crops to leapfrog previous performance and become more productive.\n\n
        2. Cultivating trees on farms can boost crop yields\n
        The cultivation of certain trees fixes nitrogen in the soil, protects fields from wind and water erosion and contributes organic matter to soils when its leaves drop. Compared to conventional farms in the country, yields of maize in these agroforestry systems can be doubled.\n\n
    </string>
</resources>