<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/defaultfield"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_motto"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:padding="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnsign_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:background="@color/logincolor"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnsign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:background="@color/sign_up_color"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/expertbtnsign_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expertsign_in"
                    android:textColor="@color/black"
                    android:background="@color/logincolor"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/expertbtnsign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expertsign_up"
                    android:textColor="@color/white"
                    android:background="@color/sign_up_color"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>